--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        framework: [net5.0]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        framework: [net5.0, net6.0]
 
     steps:
     - uses: actions/checkout@v2
@@ -28,6 +28,11 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x'
+       
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        include-prerelease: true
         
     - name: restore
       run: dotnet restore ./TestProject.sln
