--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,8 +43,8 @@ jobs:
     - name: Test
       id: test1
       continue-on-error: true
-      run: dotnet test ./TestProject.sln --framework ${{ matrix.framework }} --logger:"console;verbosity=detailed" --logger:"trx;logfilename=$GITHUB_WORKSPACE/testResults.trx"
+      run: dotnet test ./TestProject.sln --framework ${{ matrix.framework }} --logger:"console;verbosity=detailed" --logger:"trx;logfilename=${{ github.workspace }}/testResults.trx"
 
     - name: Retry tests
       if: steps.test1.outcome=='failure'
-      run: pwsh -f ./retrytests.ps1 -TestResultFile $GITHUB_WORKSPACE/testResults.trx -WorkingDirectory $GITHUB_WORKSPACE
+      run: pwsh -f ./retrytests.ps1 -TestResultFile ${{ github.workspace }}/testResults.trx -WorkingDirectory ${{ github.workspace }}
