--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -49,7 +49,11 @@ jobs:
       if: steps.test1.outcome=='failure'
       run: pwsh -f ./retrytests.ps1 -TestResultFile ${{ github.workspace }}/testResults.trx -WorkingDirectory ${{ github.workspace }}
 
-  verify:
+  all-successful:
+    # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
     runs-on: ubuntu-latest
     if: ${{ always() }}
     needs: [build-test]
+    steps:
+    - name: verify that all previous jobs succeded 
+      run: echo "Done."
